# soil-api-python

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
app/: config.py  crud.py  db.py  exceptions.py  main.py
app/areas/: models.py  views.py
app/generic/: router.py
app/gnss/: models.py  services.py  views.py
app/instruments/: services.py  tools.py  views.py
app/plots/: models.py  services.py  views.py
app/projects/: models.py  views.py
app/sensor_data/: models.py  views.py
app/sensors/: models.py  services.py  views.py
app/soil/: views.py
app/transects/: models.py  views.py
app/utils/: __init__.py  funcs.py  validators.py  views.py
migrations/: env.py
migrations/versions/: 0253d1131b84_save_selected_points_also_to_db.py  0526dbe47b60_add_area_relationship_to_plot.py  080c1302dd11_add_relationship_between_instrument_.py  08fe22b0f490_set_name_on_create_update_not_at_read_.py  0a4c09a45bb6_add_tables.py  0e2339ff8f28_add_soil_sample_values.py  128f1f044730_use_enum_for_gradient.py  1675aa811f26_set_horizon_description_to_json.py  182698c00e97_add_last_updated_to_models.py  23a5f1db56c3_add_gradient.py  2ac3352169b4_remove_non_nullable_description.py  307ac68ac38b_add_gnss_table.py  346f9c6d0589_update_plot_fields.py  36a4f777fbe1_accept_all_null_in_case_gnss_device_has_.py  376634bd3252_add_average_column.py  38d092057240_add_soil_types_and_profiles.py  3c3962a873e0_add_x_y_fields.py  423836342799_add_ts_vector_on_plot_table.py  42d41676cb22_add_soil_type_relationship.py  440bd243c866_use_base64.py  50efd46a2b7b_add_image_to_plot.py  (+42 more)
(+14 files in other folders)
